# Gesture-control

./: Readme.md  pyproject.toml  requirements.txt
