[tool.poetry]
name = "gesture-control"
version = "0.1.0"
description = ""
authors = ["Nguyendo1234 <do.do@student.nhlstenden.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
